5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1593_2043.log
== TEST (2019-03-28 10:11:58) 
-- CODE:
a = float(int("primeira nota: "))
b = float(int("segunda nota: "))
c = float(int("terceira nota: "))
d = float(int("quarta nota: ")
			 
media = (a*1+b*2+c*3+d*4)
			 
print(round(media, 2))
			 
-- ERROR:
File "XXXX", line 6
    media = (a*1+b*2+c*3+d*4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:12:55) 
-- CODE:
a = float(int("primeira nota: "))
b = float(int("segunda nota: "))
c = float(int("terceira nota: "))
d = float(int("quarta nota: ")
			 
media=a*1+b*2+c*3+d*4)
			 
print(round(media, 2))
			 
-- ERROR:
File "XXXX", line 6
    media=a*1+b*2+c*3+d*4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:13:23) 
-- CODE:
a = float(int("primeira nota: "))
b = float(int("segunda nota: "))
c = float(int("terceira nota: "))
d = float(int("quarta nota: ")
			 
media = (a*1)+(b*2)+(c*3)+(d*4)
print(round(media, 2))
			 
-- ERROR:
File "XXXX", line 6
    media = (a*1)+(b*2)+(c*3)+(d*4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:13:31) 
-- CODE:
a = float(int("primeira nota: "))
b = float(int("segunda nota: "))
c = float(int("terceira nota: "))
d = float(int("quarta nota: ")
			 
media = (a*1)+(b*2)+(c*3)+(d*4)

print(round(media, 2))
			 
-- ERROR:
File "XXXX", line 6
    media = (a*1)+(b*2)+(c*3)+(d*4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:13:58) 
-- CODE:
a = float(int("primeira nota: "))
b = float(int("segunda nota: "))
c = float(int("terceira nota: "))
d = float(int("quarta nota: ")
			 
mp = (a*1)+(b*2)+(c*3)+(d*4)

print(round(media, 2))
			 
-- ERROR:
File "XXXX", line 6
    mp = (a*1)+(b*2)+(c*3)+(d*4)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:14:17) 
-- CODE:
a = float(int("primeira nota: "))
b = float(int("segunda nota: "))
c = float(int("terceira nota: "))
d = float(int("quarta nota: "))
			 
mp = (a*1)+(b*2)+(c*3)+(d*4)

print(round(media, 2))
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(int("primeira nota: "))
ValueError: invalid literal for int() with base 10: 'primeira nota: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:14:42) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
			 
mp = (a*1)+(b*2)+(c*3)+(d*4)

print(round(media, 2))
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(media, 2))
NameError: name 'media' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:14:55) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
			 
mp = (a*1)+(b*2)+(c*3)+(d*4)

print(round(mp, 2))
			 
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:15:13) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
			 
mp = (a*1)+(b*2)+(c*3)+(d*4)

print(round(mp, 2))
			 
-- EXECUTION TIME:
0.228416
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
82.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
70.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
79.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:16:04) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
			 
mp = (a*1+b*2+c*3+d*4)/9

print(round(mp, 2))
			 
-- OUTPUT:
9.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:16:22) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
			 
mp = (a*1+b*2+c*3+d*4)/9

print(round(mp, 2))
			 
-- EXECUTION TIME:
0.242251
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
9.11
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.78
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8.82
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:16:39) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
			 
mp = (a*1+b*2+c*3+d*4)/10

print(round(mp, 2))
			 
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:16:47) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
			 
mp = (a*1+b*2+c*3+d*4)/10

print(round(mp, 2))
			 
-- EXECUTION TIME:
0.217278
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
